--- a/pom.xml
+++ b/pom.xml
@@ -125,11 +125,28 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
-			<version>5.0.0-M5</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+			<version>3.1.5</version>
+		</dependency>		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+			<version>3.1.5</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>1.19.3</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>1.19.6</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -165,6 +182,7 @@
 							<generateApiDocumentation>false</generateApiDocumentation>
 
 							<configOptions>
+								<serializableModel>true</serializableModel>
 								<generateBuilders>true</generateBuilders>
 								<useSpringBoot3>true</useSpringBoot3>
 								<useTags>true</useTags>
