--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,3 +13,5 @@ spring:
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
+springdoc.api-docs.enabled: true
+springdoc.swagger-ui.enabled: true
